<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (c) 2023 Vincent VILLOT
    *
    * Ce fichier fait partie de l'application MilkWay.
    *
    * MilkWay est un logiciel libre : vous pouvez le redistribuer
    * et/ou le modifier selon les termes de la Licence Publique Générale GNU
    * telle que publiée par la Free Software Foundation, version 3 de la licence
    * ou toute version ultérieure.
    *
    * MilkWay est distribué dans l'espoir qu'il sera utile,
    * mais SANS AUCUNE GARANTIE ; sans même la garantie implicite de QUALITÉ
    * MARCHANDE ou D'ADÉQUATION À UN USAGE PARTICULIER. Consultez la Licence
    * Publique Générale GNU pour plus de détails.
    *
    * Vous devez avoir reçu une copie de la Licence Publique Générale GNU
    * en même temps que ce programme. Si ce n'est pas le cas, consultez
    * <https://www.gnu.org/licenses/>.
    *
    * URL des sources et de la documentation du projet MilkWay : https://github.com/Farvil/MilkWay
    */
-->
<resources>
    <string name="app_name">MilkWay</string>
    <string name="title_activity_preference_activity">Paramètres</string>
    <string name="title_activity_apropos_activity">A propos</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_about">A propos</string>
    <string name="relay1">Barrière 1</string>
    <string name="relay2">Barrière 2</string>
    <string name="relay3">Barrière 3</string>
    <string name="relay4">Barrière 4</string>
    <string name="msg_err_unavailable_network">Réseau non disponible</string>
    <string name="msg_err_unknown_error">Erreur inconnue</string>
    <string name="msg_info_relay1_ok">Barrière 1 OK</string>
    <string name="msg_info_relay2_ok">Barrière 2 OK</string>
    <string name="msg_info_relay3_ok">Barrière 3 OK</string>
    <string name="msg_info_relay4_ok">Barrière 4 OK</string>
    <string name="msg_err_wifi_connection">"Erreur de connexion au relai wifi : %1$s:%2$d."</string>
    <string name="msg_err_output_stream">Impossible de récuperer le flux sortant.</string>
    <string name="msg_err_relay_command">Erreur de commande du relai</string>
    <string name="msg_err_pause_on_off">Erreur de Pause ON/OFF</string>
    <string name="msg_err_socket_close">Erreur de fermeture du socket</string>
    <string name="about_text">"\tCette application vous permet de contrôler vos barrières verticales Lely Boetech (ou autres). \n\n\tPour que cela fonctionne, vous devez impérativement installer une carte de relais wifi en parrallèle des boutons poussoirs qui commandent les barrières. Tous les détails techniques sont sur le référentiel Github de l'application à l'adresse https://github.com/Farvil/MilkWay auquel vous pouvez accéder en cliquant sur le bouton rouge ci-dessous. Voici la photo d'une carte supportée : "</string>
    <string name="url_github">https://github.com/Farvil/MilkWay</string>
    <string name="default_server_ip">192.168.4.1</string>
    <string name="version">"MilkWay version : %1$s"</string>
    <string name="author_name">Auteur : Vincent VILLOT</string>
    <string name="github_button_name">Accès au référentiel Github</string>
    <string name="wifi_relay_photo_description">Photo d\'une carte de relais wifi</string>
    <string name="msg_err_invalid_ip_address">Adresse IP ou nom de domaine invalide</string>
    <string name="msg_err_invalid_port_number">Numéro de port invalide</string>
    <string-array name="button_number_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="button_number_entries">
        <item>1 porte</item>
        <item>2 portes</item>
        <item>3 portes</item>
        <item>4 portes</item>
    </string-array>
    <string-array name="timeout_entries">
        <item>1 sec</item>
        <item>2 sec</item>
        <item>3 sec</item>
        <item>4 sec</item>
        <item>5 sec</item>
    </string-array>
    <string-array name="timeout_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>