<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (c) 2023 Vincent VILLOT
    *
    * Ce fichier fait partie de l'application MilkWay.
    *
    * MilkWay est un logiciel libre : vous pouvez le redistribuer
    * et/ou le modifier selon les termes de la Licence Publique Générale GNU
    * telle que publiée par la Free Software Foundation, version 3 de la licence
    * ou toute version ultérieure.
    *
    * MilkWay est distribué dans l'espoir qu'il sera utile,
    * mais SANS AUCUNE GARANTIE ; sans même la garantie implicite de QUALITÉ
    * MARCHANDE ou D'ADÉQUATION À UN USAGE PARTICULIER. Consultez la Licence
    * Publique Générale GNU pour plus de détails.
    *
    * Vous devez avoir reçu une copie de la Licence Publique Générale GNU
    * en même temps que ce programme. Si ce n'est pas le cas, consultez
    * <https://www.gnu.org/licenses/>.
    *
    * URL des sources et de la documentation du projet MilkWay : https://github.com/Farvil/MilkWay
    */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border3"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textAlignment="center" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/apropos_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:padding="15dp"
                android:text="@string/about_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/wifi_relay_photo_description"
                app:srcCompat="@drawable/relai_2_contacts" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGitHub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin_start"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="@dimen/button_margin_end"
                android:layout_marginBottom="25dp"
                android:background="@drawable/border"
                android:text="@string/github_button_name"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
