<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (c) 2023 Vincent VILLOT
    *
    * Ce fichier fait partie de l'application MilkWay.
    *
    * MilkWay est un logiciel libre : vous pouvez le redistribuer
    * et/ou le modifier selon les termes de la Licence Publique Générale GNU
    * telle que publiée par la Free Software Foundation, version 3 de la licence
    * ou toute version ultérieure.
    *
    * MilkWay est distribué dans l'espoir qu'il sera utile,
    * mais SANS AUCUNE GARANTIE ; sans même la garantie implicite de QUALITÉ
    * MARCHANDE ou D'ADÉQUATION À UN USAGE PARTICULIER. Consultez la Licence
    * Publique Générale GNU pour plus de détails.
    *
    * Vous devez avoir reçu une copie de la Licence Publique Générale GNU
    * en même temps que ce programme. Si ce n'est pas le cas, consultez
    * <https://www.gnu.org/licenses/>.
    *
    * URL des sources et de la documentation du projet MilkWay : https://github.com/Farvil/MilkWay
    */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/border3"
    android:paddingBottom="@dimen/main_layout_padding_bottom"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bouton1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/button_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_weight="25"
        android:background="@drawable/border"
        android:tag="1"
        android:text="@string/relay1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bouton2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/button_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_weight="25"
        android:background="@drawable/border"
        android:tag="2"
        android:text="@string/relay2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bouton3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/button_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_weight="25"
        android:background="@drawable/border"
        android:tag="3"
        android:text="@string/relay3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="visible"
        tools:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bouton4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/button_margin_start"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_weight="25"
        android:background="@drawable/border"
        android:tag="4"
        android:text="@string/relay4"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="visible"
        tools:visibility="gone"/>

</LinearLayout>